# realme_gps_l5_enabler

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  module.prop.in  post-fs-data.sh.in  update.json
src/: gnss_patcher.c
src/magisk/: post-fs-data.sh
